# Self-Quantified-App

./: .gitignore  main.py  openapi.yaml  pyproject.toml  readme.md  replit_zip_error_log.txt  requirements.txt
application/: api.py  config.py  controllers.py  models.py  validation.py
db_directory/db/: testdb.sqlite3
templates/: Create.html  Dashboards.html  Forgot_Password.html  Login.html  add_log.html  add_tracker.html  edit_log.html  edit_tracker.html  plot_data.html  view_log.html
