[tool.poetry]
name = "repl_python3_beta_MADFinalProject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.32"
Werkzeug = "^2.0.3"
Flask = "^2.0.3"
Flask-RESTful = "^0.3.9"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
